fix Folio illegible against chapter openers #2011

--- a/css/ccap-astronomy.css
+++ b/css/ccap-astronomy.css
@@ -4863,18 +4863,28 @@ div.book > div.chapter > div.titlepage div div > h1.title::after {
   bottom: 0;
   transform: translate3d(-1in, 0, 0);
 }
+.chapter > .introduction > .figure.splash {
+  position: relative;
+}
+.chapter > .introduction > .figure.splash::before {
+  background: transparent url('ccap-astronomy/folio-bg.png') 0 0 repeat-x;
+  background-size: 100% 122px;
+  height: 122px;
+  width: 8.5in;
+  display: block;
+  content: '';
+  position: absolute;
+  top: 0;
+  left: -1in;
+  right: -1in;
+}
 .chapter > .introduction > .figure.splash div.mediaobject {
   border-left: none;
   height: 4.53in;
   position: relative;
 }
 .chapter > .introduction > .figure.splash div.mediaobject::before {
-  height: 4px;
-  background-color: #77294A;
-  bottom: 70px;
-  width: 100%;
-  left: 0;
-  right: 0;
+  display: none;
 }
 .chapter > .introduction > .figure.splash div.mediaobject::after {
   width: 100%;
@@ -4886,6 +4896,7 @@ div.book > div.chapter > div.titlepage div div > h1.title::after {
   right: 0;
   height: 70px;
   background-color: #DB5C46;
+  border-top: 4px solid rgba(60, 39, 71, 0.5);
 }
 .chapter > .introduction > .figure.splash div.mediaobject img {
   width: 8.5in;
