--- a/css/refactor/astronomy-skeleton.less
+++ b/css/refactor/astronomy-skeleton.less
@@ -1,13 +1,3 @@
-// .book > .toc {
-//     ul > .toc-chapter {
-//         > ul {
-//
-//         }
-//         .toc-section {
-//             .scale-padding(2, line-height);
-//         }
-//     }
-// }
 div.itemizedlist, div.orderedlist {
   ul, ol {
     li {
@@ -51,21 +41,28 @@ div.book > div.chapter > div.titlepage {
   }
 }
 .chapter > .introduction > .figure.splash {
-  //height: 4.3in;
+  position: relative;
+
+  &::before {
+    background: transparent url('ccap-astronomy/folio-bg.png') 0 0 repeat-x;
+    background-size: 100% 122px;
+    height: 122px;
+    width: 8.5in;
+    display: block;
+    content: '';
+    position: absolute;
+    top: 0;
+    left: -1in;
+    right: -1in;
+  }
 
   div.mediaobject {
     border-left: none;
     height: 4.53in;
     position: relative;
-    //overflow: hidden;
 
     &::before {
-      height: 4px;
-      background-color: @secondary-color;
-      bottom: 70px;
-      width: 100%;
-      left: 0;
-      right: 0;
+      display: none;
     }
 
     &::after {
@@ -78,6 +75,7 @@ div.book > div.chapter > div.titlepage {
       right: 0;
       height: 70px;
       background-color: @quinary-color;
+      border-top: 4px solid rgba(60 ,39, 71, .5);
     }
 
     img {
@@ -91,6 +89,7 @@ div.book > div.chapter > div.titlepage {
     .cnx-gentext-n {
       #content>#list>.number('unordered'; introduction; chapter-outline);
     }
+
     // overide hyperlink medium blue color
     .toc-section .cnx-gentext-t {
       color: @tertiary-color;
